<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="currentItem"
            type="com.zohoapplication.data.model.CurrentItem" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_8"
        android:background="@color/white"
        android:scrollbars="none"
        tools:context=".di.main.view.UserDetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_user"
                android:layout_width="@dimen/size_100"
                android:layout_height="@dimen/size_100"
                android:elevation="@dimen/margin_4"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:fontFamily="@font/poppins"
                android:text="@string/name"
                android:textColor="@color/colorMenuGrey"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_user" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/name"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_name_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_email_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="@font/poppins"
                android:text="@string/email"
                android:textColor="@color/colorMenuGrey"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/email"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_email_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_phone_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="@font/poppins"
                android:text="@string/phone"
                android:textColor="@color/colorMenuGrey"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_email" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/phone"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_phone_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_gender_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:fontFamily="@font/poppins"
                android:text="@string/gender"
                android:textColor="@color/colorMenuGrey"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_phone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/gender"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_gender_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_weather_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/poppins"
                android:text="@string/weather_forcast"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_gender" />

            <LinearLayout
                android:id="@+id/parent_temp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_200"
                android:background="@color/colorAccent"
                android:elevation="@dimen/margin_4"
                android:layout_margin="@dimen/margin_6"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_weather_title">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_50"
                    tools:text="30" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_24"
                    tools:text="Pune" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14"
                    tools:text="Description" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/parent_wind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_6"
                android:background="@color/white"
                android:elevation="@dimen/margin_4"
                android:orientation="vertical"
                android:padding="@dimen/margin_12"
                app:layout_constraintEnd_toStartOf="@+id/guide_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parent_temp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/wind"
                    android:textColor="@color/colorMenuGrey"
                    android:textSize="@dimen/text_size_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_wind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:maxLines="1"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/parent_humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_6"
                android:background="@color/white"
                android:elevation="@dimen/margin_4"
                android:orientation="vertical"
                android:padding="@dimen/margin_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guide_line"
                app:layout_constraintTop_toBottomOf="@+id/parent_temp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/humidity"
                    android:textColor="@color/colorMenuGrey"
                    android:textSize="@dimen/text_size_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:maxLines="1"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/parent_pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_6"
                android:background="@color/white"
                android:elevation="@dimen/margin_4"
                android:orientation="vertical"
                android:padding="@dimen/margin_12"
                app:layout_constraintEnd_toStartOf="@+id/guide_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parent_wind">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/pressure"
                    android:textColor="@color/colorMenuGrey"
                    android:textSize="@dimen/text_size_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_pressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:maxLines="1"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/parent_visibility"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_6"
                android:background="@color/white"
                android:elevation="@dimen/margin_4"
                android:orientation="vertical"
                android:padding="@dimen/margin_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guide_line"
                app:layout_constraintTop_toBottomOf="@+id/parent_humidity">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/visibility"
                    android:textColor="@color/colorMenuGrey"
                    android:textSize="@dimen/text_size_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_visibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins"
                    android:maxLines="1"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>